--- a/static/index.html
+++ b/static/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <script src="//cdn.tinymce.com/4/tinymce.min.js"></script>
+  <script src="bower_components/jquery/dist/jquery.min.js"></script>
+  <script src="bower_components/typeahead.js/dist/typeahead.bundle.min.js"></script>
   <script>
     tinymce.init({
       selector:'textarea',
